Delay one edge, and pulse on either
Ports upstream's delayers and pulsers as six chips and two aliases
rather than eight chips, because two of the eight were already here.

MC2110 fe delayer is MCX011 Signal Extender exactly -- rise at once,
wait before falling -- so it is registered as an alias rather than
written twice. MC2500 pulser is MCX010 Pulse with two fields MCX010
lacked, so those were added to MCX010 and upstream's number aliased to
it. Both are the merge rule working as intended.

The four delayers look like duplicates of MC1000 with a delay and are
not. A delayed repeater holds both edges by the same amount, which
shifts a signal without changing its shape; a delayer holds one edge
and lets the other through at once, which changes the shape, so a
flicker shorter than the delay never reaches the output. That is a
debounce and nothing else here does it.

The pulsers are one implementation with two booleans, which is how
upstream builds them too: what differs is only which edge sets them off
and which way up the output rests. The burst now runs a tick at a time
so that pulse length and the rest between pulses can differ.

Finding 148, against this rewrite rather than either fork: every page
says a duration is written 20T, and the parser only ever read 20:T, so
the documented spelling silently fell back to the default. Both work
now, and telling a unit from a second field is exactly what let MCX010
be widened without changing what any existing sign means.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>